--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mango-liquidation-tracker",
   "version": "1.0.0",
-  "description": "A simple Solana Mango Markets liquidation tracker",
+  "description": "A Solana Mango Markets liquidation tracker with Telegram alerts",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2",
-    "ws": "^8.13.0"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
