--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "mango-liquidation-tracker",
   "version": "1.0.0",
-  "description": "A Solana Mango Markets liquidation tracker with Telegram alerts",
-  "main": "src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "ws": "^8.13.0"
+    "ws": "^8.18.0"
   }
 }
