--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "mango-liquidation-tracker",
+  "name": "solend-liquidation-tracker",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "Real-time Solend liquidation tracker with Telegram alerts",
   "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "ws": "^8.18.0"
-  }
+    "express": "^4.18.2",
+    "ws": "^8.13.0",
+    "node-fetch": "^3.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
