--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.13.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "@solana/web3.js": "^1.91.0"
   },
   "engines": {
     "node": ">=18.0.0"
