--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "solana-lending-liquidation-tracker",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Real-time Solana lending liquidation tracker with Telegram alerts, Pyth prices, Solend + Marginfi support",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
-    "@kamino-finance/klend-sdk": "^1.0.0",
-    "@mrgnlabs/marginfi-client-v2": "^0.1.0",
-    "@mrgnlabs/mrgn-common": "^0.1.0",
-    "@pythnetwork/price-service-sdk": "^1.0.0",
-    "@solana/spl-token": "^0.3.0",
-    "@solendprotocol/solend-sdk": "^1.0.0",
-    "@solana/web3.js": "^1.78.0",
+    "@pythnetwork/price-service-sdk": "^1.5.0",
+    "@solana/spl-token": "^0.4.11",
+    "@solendprotocol/solend-sdk": "^0.15.0",
     "bn.js": "^5.2.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.12"
+    "node-fetch": "^3.3.2",
+    "@solana/web3.js": "^1.93.0"
   }
 }
