--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "solana-lending-liquidation-tracker",
+  "name": "solana-liq-bot",
   "version": "1.0.0",
-  "description": "Track liquidations on Solana lending protocols and send Telegram alerts",
-  "main": "src/index.js",
   "type": "module",
+  "engines": { "node": ">=18" },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@solana/spl-token": "^0.3.16",
-    "@solana/web3.js": "^1.79.0",
-    "@solendprotocol/solend-sdk": "^0.14.26",
-    "@mrgnlabs/marginfi-client-v2": "^0.1.16",
-    "@mrgnlabs/mrgn-common": "^0.1.9",
+    "@coral-xyz/anchor": "^0.29.0",
+    "@kamino-finance/klend-sdk": "^5.0.1",
+    "@mrgnlabs/marginfi-client-v2": "^4.0.1",
+    "@mrgnlabs/mrgn-common": "^1.0.0",
+    "@pythnetwork/price-service": "^1.0.0",
+    "@solana/web3.js": "^1.91.0",
+    "@solendprotocol/solend-sdk": "^0.6.0",
     "bn.js": "^5.2.1",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.12",
-    "@pythnetwork/price-service-sdk": "^1.3.0",
-    "base-58": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "author": "Your Name",
-  "license": "MIT"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
+  }
 }
