--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@kamino-finance/klend-sdk": "^5.0.1",
     "@mrgnlabs/marginfi-client-v2": "^4.0.1",
     "@mrgnlabs/mrgn-common": "^1.0.0",
-    "@pythnetwork/price-service": "^1.0.0",
+    "@pythnetwork/hermes-client": "^1.0.0",
     "@solana/web3.js": "^1.91.0",
     "@solendprotocol/solend-sdk": "^0.6.0",
     "bn.js": "^5.2.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   }
