--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "solana-liq-bot",
+  "name": "solana-liquidation-monitor",
   "version": "1.0.0",
+  "description": "Monitors Solana lending protocols for liquidation risks and sends Telegram alerts.",
+  "main": "index.js",
   "type": "module",
-  "engines": { "node": ">=18" },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.29.0",
-    "@kamino-finance/klend-sdk": "^5.0.1",
-    "@mrgnlabs/marginfi-client-v2": "^4.0.1",
-    "@mrgnlabs/mrgn-common": "^1.0.0",
-    "@pythnetwork/hermes-client": "^1.0.0",
-    "@solana/web3.js": "^1.91.0",
-    "@solendprotocol/solend-sdk": "^0.6.0",
+    "@coral-xyz/anchor": "^0.30.0",
+    "@kamino-finance/klend-sdk": "^3.2.19",
+    "@mrgnlabs/marginfi-client-v2": "^3.3.1",
+    "@mrgnlabs/mrgn-common": "^3.1.2",
+    "@pythnetwork/hermes-client": "^1.1.0",
+    "@solana/web3.js": "^1.91.8",
+    "@solendprotocol/solend-sdk": "^0.15.2",
     "bn.js": "^5.2.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/bn.js": "^5.1.5"
   }
 }
