--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.95.3",
-    "@solendprotocol/solend-sdk": "^0.2.0",
+    "@solendprotocol/solend-sdk": "0.1.46",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5"
   }
