--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "solana-web-service",
+  "name": "solend-liquidation-monitor",
   "version": "1.0.0",
-  "description": "A simple Solana web service",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "@solana/web3.js": "^1.73.0"
+    "@solana/web3.js": "^1.73.0",
+    "node-fetch": "^2.6.7"
   }
 }
