--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node render-debug-fixed.js",
+    "dev": "node index.js",
+    "debug": "node render-debug-fixed.js",
+    "normal": "node index.js",
+    "monitor": "node diagnostic.js",
+    "research": "node forceProof.js",
+    "peek": "node liveProof.js"
   },
   "dependencies": {
     "@solana/web3.js": "^1.95.3",
