--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@solana/web3.js": "^1.95.3",
     "dotenv": "^16.3.1",
     "node-fetch": "^2.7.0",
-    "bs58": "^4.2.0"
+    "bs58": "^2.0.1"  // FIXED: Working version
   },
   "engines": {
     "node": ">=18"
