--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "engines": { "node": "20" },
   "scripts": { "start": "node index.js" },
   "dependencies": {
-    "@ellipsis-labs/phoenix-sdk": "^1.4.4",
-    "@orca-so/whirlpools-sdk": "^0.13.0",
-    "@solana/web3.js": "^1.95.0",
-    "bn.js": "^5.2.1",
-    "express": "^4.21.0"
+    "@ellipsis-labs/phoenix-sdk": "1.4.4",
+    "@orca-so/whirlpools-sdk": "0.13.0",
+    "@solana/web3.js": "1.95.5",
+    "bn.js": "5.2.1",
+    "express": "4.21.2"
   }
 }
