--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,6 @@ services:
     buildCommand: npm install
     startCommand: npm start
     plan: free
+    envVars:
+      - key: PORT
+        value: 10000
