--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": { "start": "node index.js" },
   "dependencies": {
     "express": "4.21.2",
-    "node-cron": "3.0.3"
+    "node-cron": "3.0.3",
+    "undici": "^6.19.8"
   }
 }
