--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "engines": { "node": "20" },
   "scripts": { "start": "node index.js" },
   "dependencies": {
-    "express": "4.21.2",
-    "node-cron": "3.0.3",
-    "undici": "^6.19.8"
+    "@solana/web3.js": "1.95.5",
+    "axios": "1.7.9",
+    "bn.js": "5.2.1",
+    "express": "4.21.2"
   }
 }
