--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": { "node": "20" },
   "scripts": { "start": "node index.js" },
   "dependencies": {
-    "@solana/web3.js": "1.95.5",
+    "axios": "1.7.9",
     "express": "4.21.2"
   }
 }
