--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Telegram DEX-arb detector",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@uniswap/sdk-core": "^1.0.0",
-    "@uniswap/v3-sdk": "^3.0.0",
     "axios": "^1.6.0",
     "dotenv": "^16.0.0",
     "ethers": "^5.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   },
   "engines": {
     "node": "18"
