--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "base-arbitrage-bot",
   "version": "1.0.0",
+  "description": "MEV-Protected Arbitrage Bot for Base Network",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "Rate arbitrage bot for Base Network DEXs",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "dotenv": "^17.2.3",
-    "ethers": "^6.16.0"
+    "ethers": "^6.16.0",
+    "chalk": "^5.4.1",
+    "express": "^4.21.2"
   }
 }
