--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "arbitrum-arb-bot",
+  "name": "base-arbitrage-bot",
   "version": "5.0.0",
-  "description": "Ultra-Sniper Arbitrage Bot (Arb, Base, Solana)",
-  "main": "server.js",
+  "description": "MEV-Protected Arbitrage Bot for Base Network",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "test": "node scan-15-pairs.js"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.89.1",
     "axios": "^1.6.0",
-    "dotenv": "^17.2.3",
-    "ejs": "^3.1.9",
-    "ethers": "^6.10.0",
-    "express": "^4.18.2"
+    "chalk": "^4.1.2",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5"
   }
 }
