--- a/.env
+++ b/.env
@@ -3,8 +3,11 @@ PORT=3000
 NODE_ENV=production
 
 # RPC Configuration (Base Chain)
-BASE_RPC_URL=https://mainnet.base.org
+# Use your private RPC endpoint for better performance and rate limits
+BASE_RPC_URL=https://base-rpc.publicnode.com
 
-# Optional: If you want to use a custom RPC
-# BASE_RPC_URL=https://base-rpc.publicnode.com
-# BASE_RPC_URL=https://base.llamarpc.com
+# Private RPC Examples (uncomment and add your endpoint):
+# Alchemy: https://base-mainnet.g.alchemy.com/v2/YOUR_API_KEY
+# Infura: https://base-mainnet.infura.io/v3/YOUR_API_KEY
+# QuickNode: https://withered-capable-seed.base-mainnet.quiknode.pro/YOUR_API_KEY/
+# Custom Private RPC: https://your-private-rpc-endpoint.com
