--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=production
 
 # RPC Configuration (Base Chain)
 # Use your private RPC endpoint for better performance and rate limits
-BASE_RPC_URL=https://base-rpc.publicnode.com
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/c9sgWYXHHHwxgwSSDwR6gP8PWB5MuTQ0
 
 # Private RPC Examples (uncomment and add your endpoint):
 # Alchemy: https://base-mainnet.g.alchemy.com/v2/YOUR_API_KEY
