--- a/.env
+++ b/.env
@@ -1,13 +1,3 @@
-# Server Configuration
-PORT=3000
-NODE_ENV=production
-
-# RPC Configuration (Base Chain)
-# Use your private RPC endpoint for better performance and rate limits
-BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/c9sgWYXHHHwxgwSSDwR6gP8PWB5MuTQ0
-
-# Private RPC Examples (uncomment and add your endpoint):
-# Alchemy: https://base-mainnet.g.alchemy.com/v2/YOUR_API_KEY
-# Infura: https://base-mainnet.infura.io/v3/YOUR_API_KEY
-# QuickNode: https://withered-capable-seed.base-mainnet.quiknode.pro/YOUR_API_KEY/
-# Custom Private RPC: https://your-private-rpc-endpoint.com
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+PORT=10000
+AUTO_SCAN=true
