--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Dependencies
 node_modules/
+npm-debug.log
+yarn-error.log
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+
+# Temporary files
+tmp/
+temp/
