--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node detector.js",
     "deploy": "npx hardhat run scripts/deploy.js --network base",
-    "test": "npx hardhat test",
-    "postinstall": "npm run deploy"
+    "test": "npx hardhat test"
   },
   "dependencies": {
     "axios": "^1.6.7",
