Restore flashloan contract and implement dynamic resilience enhancements

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ RPC_URL=https://mainnet.base.org
 # Wallet private key (hex string starting with 0x)
 PRIVATE_KEY=0xYOUR_PRIVATE_KEY_HERE
 
-# Contract address after deployment (fill this in after running npm run deploy)
-ARB_CONTRACT_ADDRESS=0xYOUR_DEPLOYED_CONTRACT_ADDRESS
+# Contract address after deployment
+ARB_CONTRACT_ADDRESS=0x68168c8A65DA9Ed1cb2B674E2039C31a40BFC336
 
 # Address to receive profits
 PROFIT_RECIPIENT=0xYOUR_WALLET_ADDRESS
