--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,41 @@
-# Base Chain RPC Endpoint
-# Get free RPC from: Infura, Alchemy, QuickNode, or use public endpoint
+# ==================== RPC Configuration ====================
+# Base Chain RPC endpoint (required)
 RPC_URL=https://mainnet.base.org
 
-# Discord/Slack Webhook URL for Arbitrage Alerts (Optional)
-# Discord: Server Settings → Integrations → Webhooks → New Webhook
-# Slack: https://api.slack.com/messaging/webhooks
-WEBHOOK_URL=
+# Alternative RPC providers (uncomment to use):
+# RPC_URL=https://base-mainnet.infura.io/v3/YOUR_INFURA_KEY
+# RPC_URL=https://base-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
 
-# Minimum price difference threshold to trigger alert (in percentage)
-# Example: 0.5 means 0.5% price difference
+# ==================== Arbitrage Detection Settings ====================
+# Minimum price difference threshold to trigger an alert (in percentage)
 PRICE_DIFFERENCE_THRESHOLD=0.5
 
-# Scan interval in milliseconds
-# Example: 10000 = 10 seconds
+# Scanning interval in milliseconds (how often to check for opportunities)
 CHECK_INTERVAL_MS=10000
 
-# Trade size for simulation (in token0 units)
-# Example: 100 means simulate swapping 100 units of token0
-TRADE_SIZE=100
+# Trade size for simulating arbitrage (in token0 units)
+TRADE_SIZE=1
 
-# Minimum liquidity in USD to consider a pool valid
-# Example: 10000 means $10,000 minimum liquidity
-MIN_LIQUIDITY_USD=10000
+# Minimum liquidity required in USD for a pool to be considered
+MIN_LIQUIDITY_USD=1000
 
-# Private key for future execution (Optional - NOT REQUIRED FOR DETECTION)
-# WARNING: Never commit this to GitHub!
+# ==================== Webhook Configuration (Optional) ====================
+# Discord or Slack webhook URL for alerts
+# Leave empty to disable webhook notifications
+WEBHOOK_URL=
+
+# ==================== Flashloan Execution Settings ====================
+# Private key of the wallet that will execute flashloan trades
+# WARNING: Never commit this to GitHub. Use environment variables in production.
 PRIVATE_KEY=
+
+# Address of the deployed flashloan arbitrage contract on Base Chain
+# This contract should handle the flashloan logic and arbitrage execution
+FLASHLOAN_CONTRACT_ADDRESS=
+
+# Gas limit for flashloan execution transactions
+GAS_LIMIT=500000
+
+# ==================== Server Configuration ====================
+# Port for the health check HTTP server
+PORT=3000
