--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "arb-bot",
   "version": "1.0.0",
-  "description": "Arbitrage bot with Hardhat deployment on Base",
+  "description": "Base Chain Multi-DEX Arbitrage Bot with Flashloan Execution",
   "main": "detector.js",
   "scripts": {
     "start": "node detector.js",
+    "dev": "node detector.js",
     "deploy": "npx hardhat run scripts/deploy.js --network base",
     "test": "npx hardhat test"
   },
@@ -16,5 +17,8 @@
   "devDependencies": {
     "hardhat": "^2.17.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
