--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node detector.js",
     "dev": "node detector.js",
     "deploy": "npx hardhat run scripts/deploy.js --network base",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "verify": "npx hardhat verify --network base 0x3F7f32C564f3bD6daa62a378b4582a78b2607F82"
   },
   "dependencies": {
     "axios": "^1.6.7",
