--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node detector.js",
     "dev": "node detector.js",
     "deploy": "npx hardhat run scripts/deploy.js --network base",
-    "test": "npx hardhat test",
-    "verify": "npx hardhat verify --network base 0x3F7f32C564f3bD6daa62a378b4582a78b2607F82"
+    "test": "npx hardhat test"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -17,9 +16,9 @@
   },
   "devDependencies": {
     "hardhat": "^2.17.0",
-    "@nomicfoundation/hardhat-verify": "^1.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0"
   },
   "engines": {
-    "node": ">=18.0.0 <21.0.0"
+    "node": ">=16.0.0"
   }
 }
