--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npx hardhat test"
   },
   "dependencies": {
+    "@indexed-finance/multicall": "^2.0.0",
     "axios": "^1.6.7",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2"
